# trademark-catalog

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  populate-db.py  populate_db.py  pyproject.toml  setup.cfg
app/: application.py  composition_root.py  configuration.py
app/api/: base_response.py  codes.py  urls.py
app/api/handlers/: register_trademark.py  search_trademark.py
app/models/: trademark.py
app/repositories/: base_repository.py  database_session.py  trademark.py
app/services/: register_trademark.py  search_trademark.py
docker/: Dockerfile
migrations/: changelog.xml
migrations/sql/: 0001_add_trademark_table.sql  0002_add_trademark_index_title.sql
tests/: conftest.py  db_client.py
tests/integration/: conftest.py  test_register_tm.py  test_search_tm.py
tests/plugins/: postgresql.py
tests/unit/: conftest.py  test_register_tm_service.py  test_search_tm_service.py
trademark_finder/: application.py  composition_root.py  configuration.py  urls.py
trademark_finder/handlers/: find_exact_trademark.py  find_similar_trademark.py
trademark_finder/models/: trademark.py
trademark_finder/repositories/: base.py  trademark.py
trademark_finder/services/: application_parser.py  find_exact_trademark.py  find_similar_trademark.py
trademark_finder/utils/: helpers.py
