[tool.poetry]
name = "trademark-finder"
version = "0.1.0"
description = "Trademarks search engine"
authors = ["Roman Chushkin <r.chushkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
aiohttp = "^3.8.1"
asyncpg = ">=0.25.0, <1.0.0"

[tool.poetry.dev-dependencies]
flake8-bandit = "2.1.2"
bandit = "1.7.2"
wemake-python-styleguide = "^0.15.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
