[tool.poetry]
name = "trademark-catalog"
version = "1.0.0"
description = "Trademarks search engine"
authors = ["Roman Chushkin <r.chushkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
aiohttp = "^3.8.1"
asyncpg = ">0.25.0, <1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
wemake-python-styleguide = ">0.16.0, <1.0.0"
safety = "^2.3.5"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
