[tool.poetry]
name = "trademark-catalog"
version = "1.0.0"
description = "trademark-catalog"
authors = ["Roman Chushkin <r.chushkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
aiohttp = "^3.8.1"
asyncpg = ">0.25.0, <1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
wemake-python-styleguide = ">0.16.0, <1.0.0"
safety = "^2.3.5"
pre-commit = "^3.3.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.5.1"
pytest-asyncio = ">0.14.0, <1.0.0"
pytest-httpserver = "^1.0.8"
yoyo-migrations = "^8.2.0"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
